Remove Java warning
"The method newInstance() from the type Class<Something> is deprecated since version 9."